# EatExpress

./: .gitignore  README.html  README.md  README.txt
logs/: dummy
logs/phase1/: dijkstra_ph1_16x16.csv  dijkstra_ph1_20x20.csv  (+11 more)
notes/: Examples.md
other/: ideias_faseIII.md
report-final/: all.html
reports/: algoritmos.md  algoritmosFases.md  all.html  all.md  conclusion.md  formalization.md  identification.md  implementation.html  implementation.md  introduction.md  nossos_algoritmos.md  notasFormalizacao.md  primeira_analise.md  pseudo_codigo_implementacao_das_fases.md  references.md  use-cases.md  use_cases2.md
src/: CMakeLists.txt  main.cpp
src/Mapas/GridGraphs/16x16/: edges.txt  nodes.txt
src/Mapas/GridGraphs/16x16Bike/: edges.txt  nodes.txt
src/Mapas/GridGraphs/16x16Random/: edges.txt
src/Mapas/GridGraphs/20x20/: nodes.txt
src/Mapas/GridGraphs/20x20Bike/: edges.txt  nodes.txt
src/Mapas/GridGraphs/20x20Grid/: edges.txt  nodes.txt
src/Mapas/GridGraphs/30x30/: edges.txt  nodes.txt
src/Mapas/GridGraphs/30x30Bike/: edges.txt  nodes.txt
src/Mapas/GridGraphs/30x30Grid/: edges.txt  nodes.txt
src/Mapas/GridGraphs/4x4/: edges.txt  nodes.txt
src/Mapas/GridGraphs/50x50/: edges.txt  nodes.txt
src/Mapas/GridGraphs/8x8/: edges.txt  nodes.txt
src/Mapas/GridGraphsTags/16x16/: tags_16x16.txt  tags_30x30.txt
src/Mapas/GridGraphsTags/20x20/: tags_20x20.txt
src/Mapas/GridGraphsTags/30x30/: tags_30x30.txt
src/Mapas/GridGraphsTags/4x4/: tags_4x4.txt
src/Mapas/GridGraphsTags/8x8/: tags_8x8.txt
src/Mapas/Penafiel/: tags_penafiel.txt
src/Mapas/PortugalMaps/Espinho/: edges_espinho.txt  nodes_lat_lon_espinho.txt  nodes_x_y_espinho.txt
src/Mapas/PortugalMaps/Espinho/Full/: espinho_full_edges.txt  espinho_full_nodes_latlng.txt  espinho_full_nodes_xy.txt
src/Mapas/PortugalMaps/Penafiel/: distances_penafiel.txt  edges_penafiel.txt  nodes_lat_lon_penafiel.txt  nodes_x_y_penafiel.txt
src/Mapas/PortugalMaps/Penafiel/Full/: penafiel_full_edges.txt  penafiel_full_nodes_latlng.txt  penafiel_full_nodes_xy.txt
src/Mapas/PortugalMaps/Porto/: edges_porto.txt  nodes_lat_lon_porto.txt  nodes_x_y_porto.txt
src/Mapas/PortugalMaps/Porto/Full/: porto_full_edges.txt  porto_full_nodes_latlng.txt  porto_full_nodes_xy.txt
src/Mapas/PortugalMapsTags/penafiel/: tags_penafiel.txt
src/Tests/: Coordinates.cpp  Coordinates.h  Edge.h  Employee.cpp  Employee.h  Graph.h  Request.cpp  Request.h  SingleTask.cpp  SingleTask.h  SpecialTask.cpp  SpecialTask.h  Task.cpp  Task.h  Vertex.h  app.cpp  app.h  simulations.cpp  simulations.h  tests.cpp  utils.cpp  utils.h
src/Tests/phase_tests/: p1_test.cpp  p2_test.cpp
src/lib/googletest-master/: CMakeLists.txt
src/lib/googletest-master/googlemock/: CMakeLists.txt
src/lib/googletest-master/googlemock/test/: gmock_output_test_golden.txt
src/lib/googletest-master/googletest/: CMakeLists.txt
src/lib/googletest-master/googletest/test/: googletest-output-test-golden-lin.txt
src/src/: Coordinates.cpp  Employee.h  Request.h  SingleTask.h  Task.cpp  app.h  tests.cpp
src/src/app/: app.cpp  app.h
src/src/eatExpress/: Request.h  SpecialTask.cpp  Task.h
src/src/graph/: Graph.h  Vertex.h
src/src/phase_tests/: p1_test.cpp  p2_test.cpp  p3_test.cpp
src/src/simulations/: simulations.cpp  simulations.h
src/src/utils/: tests.cpp  utils.cpp  utils.h
(+5 files in other folders)
